--- a/config/locales/simple_form.ar.yml
+++ b/config/locales/simple_form.ar.yml
@@ -1,3 +1,4 @@
+---
 ar:
   simple_form:
     hints:
@@ -124,9 +125,9 @@ ar:
         mention: ابعث بريداً إلكترونيًا عندما يُشير إليك أو يذكُرك أحدهم
         reblog: ابعث بريداً إلكترونيًا عندما يقوم أحدهم بترقية منشورك
         report: إرسال رسالة إلكترونية عند تلقّي إبلاغ جديد
-    'no': 'لا'
+    'no': لا
     recommended: موصى بها
     required:
       mark: "*"
       text: مطلوب
-    'yes': 'نعم'
+    'yes': نعم
