--- a/config/locales/simple_form.eo.yml
+++ b/config/locales/simple_form.eo.yml
@@ -1,3 +1,4 @@
+---
 eo:
   simple_form:
     hints:
@@ -130,9 +131,9 @@ eo:
         pending_account: Sendi retmesaĝon kiam nova konto bezonas kontrolon
         reblog: Sendi retmesaĝon kiam iu diskonigas vian mesaĝon
         report: Sendi retmesaĝon kiam nova signalo estas sendita
-    'no': 'Ne'
+    'no': Ne
     recommended: Rekomendita
     required:
       mark: "*"
       text: bezonata
-    'yes': 'Jes'
+    'yes': Jes
