--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -113,6 +113,7 @@ fa:
       header: زمینه
       inbox_url: نشانی صندوق ورودی
       invited_by: دعوت‌شده از طرف
+      ip: IP
       joined: عضویت از
       location:
         all: همه
@@ -268,6 +269,7 @@ fa:
       created_msg: مسدودکردن دامین در حال انجام است
       destroyed_msg: مسدودکردن دامین واگردانده شد
       domain: دامین
+      existing_domain_block_html: شما پیش‌تر محدودیت‌های سخت‌تری روی %{name} اعمال کرده‌اید، و باید نخست <a href="%{unblock_url}">مسدودسازی را لغو کنید</a>.
       new:
         create: مسدودسازی
         hint: مسدودسازی دامین جلوی فهرست‌شدن حساب‌ها در پایگاه داده را نمی‌گیرد، بلکه به طور خودکار روش‌های مدیریتی را روی فعالیت‌های فعلی و گذشتهٔ آن حساب‌ها اعمال می‌کند.
@@ -333,6 +335,8 @@ fa:
         expired: منقضی‌شده
         title: فیلتر
       title: دعوت‌ها
+    pending_accounts:
+      title: حساب‌های منتظر (%{count})
     relays:
       add_new: افزودن رلهٔ تازه
       delete: حذف
@@ -469,6 +473,7 @@ fa:
       confirmed: تأییدشده
       expires_in: مهلت انقضا
       last_delivery: آخرین ارسال
+      title: WebSub
       topic: موضوع
     tags:
       accounts: حساب‌ها
@@ -529,6 +534,9 @@ fa:
     migrate_account: نقل مکان به یک حساب دیگر
     migrate_account_html: اگر می‌خواهید این حساب را به حساب دیگری منتقل کنید، <a href="%{path}">این‌جا را کلیک کنید</a>.
     or_log_in_with: یا ورود به وسیلهٔ
+    providers:
+      cas: CAS
+      saml: SAML
     register: عضو شوید
     registration_closed: سرور %{instance} عضو تازه‌ای نمی‌پذیرد
     resend_confirmation: راهنمایی برای تأیید را دوباره بفرست
@@ -603,6 +611,7 @@ fa:
       request: درخواست بایگانی داده‌هایتان
       size: اندازه
     blocks: حساب‌های مسدودشده
+    csv: CSV
     domain_blocks: دامین‌های مسدودشده
     follows: حساب‌های پی‌گرفته
     lists: فهرست‌ها
@@ -746,11 +755,23 @@ fa:
       body: "%{name} نوشتهٔ شما را بازبوقید:"
       subject: "%{name} نوشتهٔ شما را بازبوقید"
       title: بازبوق تازه
+  number:
+    human:
+      decimal_units:
+        format: "%n%u"
+        units:
+          billion: B
+          million: M
+          quadrillion: Q
+          thousand: K
+          trillion: T
+          unit: ''
   pagination:
     newer: تازه‌تر
     next: بعدی
     older: قدیمی‌تر
     prev: قبلی
+    truncate: "&hellip;"
   polls:
     errors:
       already_voted: شما قبلاً در این نظرسنجی رأی داده‌اید
@@ -763,6 +784,8 @@ fa:
       too_many_options: نمی‌تواند بیشتر از %{max} گزینه داشته باشد
   preferences:
     other: سایر تنظیمات
+    posting_defaults: تنظیمات پیش‌فرض انتشار
+    public_timelines: فهرست عمومی نوشته‌ها
   relationships:
     activity: فعالیت حساب
     dormant: غیرفعال
@@ -810,7 +833,18 @@ fa:
     description: "%{browser} روی %{platform}"
     explanation: مرورگرهای زیر هم‌اینک به حساب شما وارد شده‌اند.
     platforms:
+      adobe_air: Adobe Air
+      android: اندروید
+      blackberry: Blackberry
+      chrome_os: ChromeOS
+      firefox_os: Firefox OS
+      ios: iOS
+      linux: لینوکس
+      mac: مک
       other: سیستم ناشناخته
+      windows: ویندوز
+      windows_mobile: Windows Mobile
+      windows_phone: Windows Phone
     revoke: لغو کردن
     revoke_success: نشست با موفقیت لغو شد
     title: نشست‌ها
@@ -863,6 +897,7 @@ fa:
       vote: رأی
     show_more: نمایش
     sign_in_to_participate: برای شرکت در گفتگو وارد حساب خود شوید
+    title: '%{name}: "%{quote}"'
     visibilities:
       private: خصوصی
       private_long: تنها پیگیران شما می‌بینند
@@ -964,6 +999,7 @@ fa:
   time:
     formats:
       default: "%d %b %Y, %H:%M"
+      month: "%b %Y"
   two_factor_authentication:
     code_hint: برای تأیید، کدی را که برنامهٔ تأییدکننده ساخته است وارد کنید
     description_html: اگر <strong>ورود دومرحله‌ای</strong> را فعال کنید، برای ورود به سیستم به تلفن خود نیاز خواهید داشت تا برایتان یک کد موقتی بسازد.
