--- a/config/locales/doorkeeper.hu.yml
+++ b/config/locales/doorkeeper.hu.yml
@@ -3,7 +3,7 @@ hu:
   activerecord:
     attributes:
       doorkeeper/application:
-        name: Név
+        name: Alkalmazás neve
         redirect_uri: Visszairányító URI
         scopes: Hatáskör
         website: Az alkalmazás weboldala
@@ -36,18 +36,19 @@ hu:
         scopes: A nézeteket szóközzel válaszd el. Hagyd üresen az alapértelmezett nézetekhez.
       index:
         application: Alkalmazás
+        callback_url: Callback URL
         delete: Eltávolítás
         name: Név
         new: Új alkalmazás
         scopes: Hatáskör
         show: Mutat
-        title: Alkalmazásod
+        title: Alkalmazásaid
       new:
         title: Új alkalmazás
       show:
         actions: Műveletek
         application_id: Alkalmazás azonosító
-        callback_urls: Callback urlek
+        callback_urls: Callback URL-ek
         scopes: Nézetek
         secret: Titok
         title: 'Alkalmazás: %{name}'
@@ -61,6 +62,8 @@ hu:
         able_to: Képes lesz
         prompt: "%{client_name} nevű alkalmazás engedélyt kér a fiókodhoz való hozzáféréshez."
         title: Engedély szükséges
+      show:
+        title: Másold le ezt az engedélyező kódót és írd be az alkalmazásba.
     authorized_applications:
       buttons:
         revoke: Visszavonás
@@ -68,27 +71,28 @@ hu:
         revoke: Biztos vagy benne?
       index:
         application: Alkalmazás
-        created_at: Készítve
+        created_at: Felhatalmazva
+        date_format: "%Y-%m-%d %H:%M:%S"
         scopes: Hatáskör
         title: Engedélyezett alkalmazásaid
     errors:
       messages:
-        access_denied: Az erőforrás tulajdonosa vagy hitelesítő kiszolgálója megtakadta a kérést.
+        access_denied: Az erőforrás tulajdonosa vagy hitelesítő kiszolgálója megtagadta a kérést.
         credential_flow_not_configured: Az erőforrás tulajdonos jelszóadatainak átadása megszakadt, mert a Doorkeeper.configure.resource_owner_from_credentials beállítatlan.
-        invalid_client: A kliens hitelesítése megszakadt, mert a ismeretlen a kliens, kliens nem küldött hitelesítést, vagy ismeretlen a kliens
-        invalid_grant: A biztosított hitelesítés érvénytelen, lejárt, visszavont, vagy nem egyezik a hitelesítéi kérésben használt URIval, vagy más kliensnek lett címezve.
-        invalid_redirect_uri: A redirect uri nem valós.
-        invalid_request: A kérésből hiányzik egy szükséges paraméter, nem támogatott paramétert tartalmaz, vagy egyéb módon hibás.
+        invalid_client: A kliens hitelesítése megszakadt, mert ismeretlen a kliens, a kliens nem küldött hitelesítést, vagy ismeretlen a kliens.
+        invalid_grant: A biztosított hitelesítés érvénytelen, lejárt, visszavont, vagy nem egyezik a hitelesítési kérésben használt URI-val, vagy más kliensnek lett címezve.
+        invalid_redirect_uri: A redirect URI nem valós.
+        invalid_request: A kérésből hiányzik egy szükséges paraméter, nem támogatott paramétert tartalmaz, vagy máshogy sérült.
         invalid_resource_owner: A biztosított erőforrás tulajdonosának hitelesítő adatai nem valósak, vagy az erőforrás tulajdonosa nem található.
         invalid_scope: A kért nézet érvénytelen, ismeretlen, vagy hibás.
         invalid_token:
           expired: Hozzáférési kulcs lejárt
-          revoked: Hozzáférési kulcs vissza lett vonva
+          revoked: Hozzáférési kulcsot visszavonták
           unknown: Hozzáférési kulcs érvénytelen
         resource_owner_authenticator_not_configured: Erőforrás tulajdonos keresés megszakadt, ugyanis a Doorkeeper.configure.resource_owner_authenticator beállítatlan.
         server_error: Hitelesítő szervert váratlan esemény érte, mely meggátolta a kérés teljesítését.
-        temporarily_unavailable: A hitelesítő szerver jelenleg nem tudja teljesíteni a kérést egy átmeneti túlterheltség vagy a kiszolgáló karbantartása miatt.
-        unauthorized_client: A kliens nincs feljogosítva a kérés teljesítésére.
+        temporarily_unavailable: A hitelesítő szerver jelenleg nem tudja teljesíteni a kérést átmeneti túlterheltség vagy a kiszolgáló karbantartása miatt.
+        unauthorized_client: A kliens nincs feljogosítva erre a kérésre.
         unsupported_grant_type: A hitelesítés módja nem támogatott a hitelesítő kiszolgálón.
         unsupported_response_type: A hitelesítő kiszolgáló nem támogatja ezt a választ.
     flash:
@@ -110,6 +114,29 @@ hu:
       application:
         title: OAuth engedély szükséges
     scopes:
-      follow: fiókok követése, blokkoláse, blokkolás feloldása és követés abbahagyása
+      follow: fiókok követése, letiltása, tiltás feloldása és követés abbahagyása
+      push: push értesítések fogadása
       read: fiókod adatainak olvasása
-      write: bejegyzés írása a nevedben
+      read:accounts: fiók adatainak megtekintése
+      read:blocks: letiltások megtekintése
+      read:favourites: kedvencek megtekintése
+      read:filters: szűrök megtekintése
+      read:follows: követések megtekintése
+      read:lists: listák megtekintése
+      read:mutes: némítások megtekintése
+      read:notifications: értesítések megtekintése
+      read:reports: bejelentések megtekintése
+      read:search: saját nevedben keresés
+      read:statuses: tülkök megtekintése
+      write: fiókod adatainak megváltoztatása
+      write:accounts: profilod megváltoztatása
+      write:blocks: fiókok és domainek letiltása
+      write:favourites: kedvenc tülkök
+      write:filters: szűrők létrehozása
+      write:follows: emberek követése
+      write:lists: listák létrehozása
+      write:media: media feltöltése
+      write:mutes: emberek és beszélgetések némítása
+      write:notifications: értesítések törlése
+      write:reports: mások bejelentése
+      write:statuses: tülkök közzététele
