Fixing bugs and normalizing

--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -35,7 +35,7 @@ hu:
     status_count_before: eddig
     tagline: Kövess barátokat és találj újakat
     terms: Felhasználási feltételek
-    user_count_after: felhasználónk
+    user_count_after:
       one: felhasználónk
       other: felhasználónk
     user_count_before: Összesen
@@ -785,8 +785,8 @@ hu:
       too_many_options: nem lehet több, mint %{max} pont
   preferences:
     other: Egyéb
-    publishing: Közzététel
-    web: Web
+    posting_defaults: Tülkök alapértelmezései
+    public_timelines: Nyilvános idővonal
   relationships:
     activity: Fiók aktivitás
     dormant: Elhagyott
