--- a/config/locales/simple_form.hu.yml
+++ b/config/locales/simple_form.hu.yml
@@ -131,9 +131,9 @@ hu:
         pending_account: E-mail küldése, ha új fiókot kell engedélyezni
         reblog: E-mail küldése, amikor valaki megtolja a tülködet
         report: E-mail küldése, ha új bejelentés érkezett
-    'no': 'Nem'
+    'no': Nem
     recommended: Javasolt
     required:
       mark: "*"
       text: kötelező
-    'yes': 'Igen'
+    'yes': Igen
