Translate 'relationships' to '同僚'

--- a/config/locales/ja-IM.yml
+++ b/config/locales/ja-IM.yml
@@ -903,7 +903,7 @@ ja-IM:
     notifications: 通知
     preferences: ユーザー設定
     profile: プロフィール
-    relationships: フォロー・フォロワー
+    relationships: 同僚
     two_factor_authentication: 二段階認証
   statuses:
     attached:
