Add simple_form label for admin theme selector

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -110,6 +110,7 @@ en:
         setting_theme: Site theme
         setting_unfollow_modal: Show confirmation dialog before unfollowing someone
         severity: Severity
+        theme: Theme
         type: Import type
         username: Username
         username_or_email: Username or Email
