--- a/config/locales/devise.hu.yml
+++ b/config/locales/devise.hu.yml
@@ -1,3 +1,4 @@
+---
 hu:
   devise:
     confirmations:
@@ -76,7 +77,7 @@ hu:
   errors:
     messages:
       already_confirmed: már meg lett erősítve, kérjük jelentkezz be
-      confirmation_period_expired: '%{period} belül kellett megerősíteni, kérjük igényelj újat'
+      confirmation_period_expired: "%{period} belül kellett megerősíteni, kérjük igényelj újat"
       expired: lejárt, kérjük igényelj újat
       not_found: nem található
       not_locked: nincs lezárva
