--- a/config/locales/simple_form.fa.yml
+++ b/config/locales/simple_form.fa.yml
@@ -1,3 +1,4 @@
+---
 fa:
   simple_form:
     hints:
@@ -130,9 +131,9 @@ fa:
         pending_account: وقتی حساب تازه‌ای نیاز به بازبینی داشت ایمیل بفرست
         reblog: وقتی کسی نوشتهٔ شما را بازبوقید ایمیل بفرست
         report: وقتی گزارش تازه‌ای فرستاده شد ایمیل بفرست
-    'no': 'خیر'
+    'no': خیر
     recommended: توصیه می‌شود
     required:
       mark: "*"
       text: ضروری
-    'yes': 'بله'
+    'yes': بله
