--- a/config/locales/simple_form.hu.yml
+++ b/config/locales/simple_form.hu.yml
@@ -1,3 +1,4 @@
+---
 hu:
   simple_form:
     hints:
@@ -130,9 +131,9 @@ hu:
         pending_account: E-mail küldése, ha új fiókot kell engedélyezni
         reblog: E-mail küldése, amikor valaki megtolja a tülködet
         report: E-mail küldése, ha új bejelentés érkezett
-    'no': 'Nem'
+    'no': Nem
     recommended: Ajánlott
     required:
       mark: "*"
       text: kötelező
-    'yes': 'Igen'
+    'yes': Igen
