--- a/config/locales/simple_form.th.yml
+++ b/config/locales/simple_form.th.yml
@@ -1,3 +1,4 @@
+---
 th:
   simple_form:
     hints:
@@ -130,9 +131,9 @@ th:
         pending_account: ส่งอีเมลเมื่อบัญชีใหม่ต้องการการตรวจทาน
         reblog: ส่งอีเมลเมื่อใครสักคนดันสถานะของคุณ
         report: ส่งอีเมลเมื่อมีการส่งรายงานใหม่
-    'no': 'ไม่'
+    'no': ไม่
     recommended: แนะนำ
     required:
       mark: "*"
       text: ต้องระบุ
-    'yes': 'ใช่'
+    'yes': ใช่
