--- a/config/locales/doorkeeper.cy.yml
+++ b/config/locales/doorkeeper.cy.yml
@@ -1,3 +1,4 @@
+---
 cy:
   activerecord:
     attributes:
@@ -116,26 +117,26 @@ cy:
       follow: addasu perthnasau cyfrif
       push: derbyn eich hysbysiadau gwthiadwy
       read: darllen holl ddata eich cyfrif
-      "read:accounts": gweld gwybodaeth y cyfrif
-      "read:blocks": gweld eich blociau
-      "read:favourites": gweld eich ffefrynnau
-      "read:filters": gweld eich hidlwyr
-      "read:follows": gweld eich dilynwyr
-      "read:lists": gweld eich rhestrau
-      "read:mutes": gweld y rheini wedi'i tewi
-      "read:notifications": gweld eich hysbysiadau
-      "read:reports": gweld eich adroddiadau
-      "read:search": edrych ar eich rhan
-      "read:statuses": gweld pob statws
+      read:accounts: gweld gwybodaeth y cyfrif
+      read:blocks: gweld eich blociau
+      read:favourites: gweld eich ffefrynnau
+      read:filters: gweld eich hidlwyr
+      read:follows: gweld eich dilynwyr
+      read:lists: gweld eich rhestrau
+      read:mutes: gweld y rheini wedi'i tewi
+      read:notifications: gweld eich hysbysiadau
+      read:reports: gweld eich adroddiadau
+      read:search: edrych ar eich rhan
+      read:statuses: gweld pob statws
       write: addasu holl ddata eich cyfri
-      "write:accounts": addasu eich proffil
-      "write:blocks": blocio cyfrifon a parthau
-      "write:favourites": hoff dŵtiau
-      "write:filters": creu hidlwyr
-      "write:follows": dilyn pobl
-      "write:lists": creu rhestrau
-      "write:media": uwchlwytho ffeiliau cyfryngau
-      "write:mutes": tawelu pobl a sgyrsiau
-      "write:notifications": clirio eich hysbysiadau
-      "write:reports": adrodd pobl eraill
-      "write:statuses": cyhoeddi tŵt
+      write:accounts: addasu eich proffil
+      write:blocks: blocio cyfrifon a parthau
+      write:favourites: hoff dŵtiau
+      write:filters: creu hidlwyr
+      write:follows: dilyn pobl
+      write:lists: creu rhestrau
+      write:media: uwchlwytho ffeiliau cyfryngau
+      write:mutes: tawelu pobl a sgyrsiau
+      write:notifications: clirio eich hysbysiadau
+      write:reports: adrodd pobl eraill
+      write:statuses: cyhoeddi tŵt
