--- a/config/locales/simple_form.sk.yml
+++ b/config/locales/simple_form.sk.yml
@@ -1,3 +1,4 @@
+---
 sk:
   simple_form:
     hints:
@@ -130,8 +131,8 @@ sk:
         pending_account: Zaslať email, ak treba prehodnotiť nový účet
         reblog: Zaslať email, ak niekto re-tootne tvoj príspevok
         report: Zaslať email, ak niekto podá nové nahlásenie
-    'no': 'Nie'
+    'no': Nie
     recommended: Odporúčané
     required:
       text: povinné
-    'yes': 'Áno'
+    'yes': Áno
