--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -1,6 +1,7 @@
+---
 sk:
   about:
-    about_hashtag_html: 'Toto sú verejné príspevky, otagované pod <strong>#%{hashtag}</strong>. Ak máš účet hocikde v rámci fediversa, môžeš s nimi narábať.'
+    about_hashtag_html: Toto sú verejné príspevky, otagované pod <strong>#%{hashtag}</strong>. Ak máš účet hocikde v rámci fediversa, môžeš s nimi narábať.
     about_mastodon_html: Mastodon je sociálna sieť založená na otvorených webových protokoloch a na slobodnom softvéri. Je decentralizovaná, podobne ako email.
     about_this: O tomto serveri
     active_count_after: aktívni
@@ -29,17 +30,17 @@ sk:
     server_stats: 'Serverové štatistiky:'
     source_code: Zdrojový kód
     status_count_after:
-      one: príspevok
       few: príspevkov
       many: príspevkov
+      one: príspevok
       other: príspevky
     status_count_before: Ktorí napísali
     tagline: Následuj kamarátov, a objavuj nových
     terms: Podmienky užívania
     user_count_after:
-      one: užívateľ
       few: užívateľov
       many: užívateľov
+      one: užívateľ
       other: uživatelia
     user_count_before: Domov pre
     what_is_mastodon: Čo je Mastodon?
@@ -47,9 +48,9 @@ sk:
     choices_html: "%{name}vé voľby:"
     follow: Následuj
     followers:
-      one: Sledujúci
       few: Sledovateľov
       many: Sledovateľov
+      one: Sledujúci
       other: Sledovatelia
     following: Následujem
     joined: Pridal/a sa v %{date}
@@ -64,9 +65,9 @@ sk:
     pin_errors:
       following: Musíš už následovať toho človeka, ktorého si praješ zviditeľniť
     posts:
-      one: Príspevok
       few: Príspevkov
       many: Príspevkov
+      one: Príspevok
       other: Príspevky
     posts_tab_heading: Príspevky
     posts_with_replies: Príspevky s odpoveďami
@@ -209,7 +210,7 @@ sk:
         disable_user: "%{name} zakázal prihlásenie pre používateľa %{target}"
         enable_custom_emoji: "%{name} povolil emoji %{target}"
         enable_user: "%{name} povolil prihlásenie pre používateľa %{target}"
-        memorialize_account: "%{name} zmenil účet %{target} na stránku \"Navždy budeme spomínať\""
+        memorialize_account: '%{name} zmenil účet %{target} na stránku "Navždy budeme spomínať"'
         promote_user: "%{name} povýšil/a používateľa %{target}"
         remove_avatar_user: "%{name} odstránil/a %{target}ov avatár"
         reopen_report: "%{name} znovu otvoril/a hlásenie užívateľa %{target}"
@@ -298,9 +299,9 @@ sk:
         suspend: vylúčené
       show:
         affected_accounts:
-          one: '%{count} účet v databázi ovplyvnený'
           few: "%{count} účtov v databázi ovplyvnených"
           many: "%{count} účtov v databázi ovplyvnených"
+          one: "%{count} účet v databázi ovplyvnený"
           other: "%{count} účty v databázi ovplyvnené"
         retroactive:
           silence: Zruš stíšenie všetkých momentálne utíšených účtov z tejto domény
@@ -320,14 +321,14 @@ sk:
       title: Blokované emailové adresy
     followers:
       back_to_account: Späť na účet
-      title: "Sledovatielia užívateľa %{acct}"
+      title: Sledovatielia užívateľa %{acct}
     instances:
       by_domain: Doména
       delivery_available: Je v dosahu doručovania
       known_accounts:
-        one: "%{count} známy účet"
         few: "%{count} známych účtov"
         many: "%{count} známych účtov"
+        one: "%{count} známy účet"
         other: "%{count} známe účty"
       moderation:
         all: Všetky
@@ -352,7 +353,7 @@ sk:
     relays:
       add_new: Pridaj nový federovací mostík
       delete: Vymaž
-      description_html: <strong>Federovací mostík</strong> je prechodný server, ktorý obmieňa veľké množstvá verejných príspevkov medzi tými servermi ktoré na od neho odoberajú, aj doňho prispievajú. <strong>Môže to pomôcť malým a stredným instanciám objavovať federovaný obsah</strong>, čo inak vyžaduje aby miestni užívatelia ručne následovali iných ľudí zo vzdialených instancií.
+      description_html: "<strong>Federovací mostík</strong> je prechodný server, ktorý obmieňa veľké množstvá verejných príspevkov medzi tými servermi ktoré na od neho odoberajú, aj doňho prispievajú. <strong>Môže to pomôcť malým a stredným instanciám objavovať federovaný obsah</strong>, čo inak vyžaduje aby miestni užívatelia ručne následovali iných ľudí zo vzdialených instancií."
       disable: Vypni
       disabled: Vypnutý
       enable: Povoľ
@@ -509,7 +510,7 @@ sk:
     new_report:
       body: "%{reporter} nahlásil/a %{target}"
       body_remote: Niekto z %{domain} nahlásil/a %{target}
-      subject: 'Nové hlásenie pre %{instance} (#%{id})'
+      subject: Nové hlásenie pre %{instance} (#%{id})
   appearance:
     advanced_web_interface: Pokročilé webové rozhranie
     animations_and_accessibility: Animácie a prístupnosť
@@ -591,9 +592,9 @@ sk:
     explore_mastodon: Prebádaj %{title}
     how_to_enable: Momentálne niesi zaradený/á do verejnej profilovej databázy. Prihlásiť sa môžeš nižšie. Použi haštagy vo svojom biografickom popise na profile, ak chceš byť uvedený/á aj pod konkrétnými haštagmi!
     people:
-      one: "%{count} človek"
       few: "%{count} ľudí"
       many: "%{count} ľudí"
+      one: "%{count} človek"
       other: "%{count} ľudia"
   errors:
     '403': Nemáš povolenie pre zobrazenie tejto stránky.
@@ -696,9 +697,9 @@ sk:
     generate: Vygeneruj
     invited_by: 'Bol/a si pozvaný/á užívateľom:'
     max_uses:
-      one: 1 využitie
       few: "%{count} využití"
       many: "%{count} využití"
+      one: 1 využitie
       other: "%{count} využitia"
     max_uses_prompt: Bez obmedzení
     prompt: Vygeneruj a zdieľaj linky s ostatnými, aby mali umožnený prístup k tomuto serveru
@@ -737,11 +738,11 @@ sk:
     follow_request:
       action: Spravuj žiadosti o sledovanie
       body: "%{name} žiada povolenie ťa následovať"
-      subject: '%{name} ťa žiadá o možnosť sledovania'
+      subject: "%{name} ťa žiadá o možnosť sledovania"
       title: Nová žiadosť o následovanie
     mention:
       action: Odpovedať
-      body: '%{name} ťa spomenul/a v:'
+      body: "%{name} ťa spomenul/a v:"
       subject: Bol/a si spomenutý/á užívateľom %{name}
       title: Novo spomenutý/á
     reblog:
@@ -904,7 +905,7 @@ sk:
       <li>Pre lepšie moderovanie komunity sa napríklad môže tvoja IP adresa porovnať s ostatnými už známimi adresami, aby bolo možné zistiť, či nedochádza napríklad k obchádzaniu pravidiel vylúčenia, aleb k iným porušeniam zásad.</li>
       <li>Emailová adresa, ktorú poskytneš, môže byť použitá na zasielanie informácií, oboznámení keď ostatní užívatelia interaktujú s tvojím obsahom, alebo na posielanie správ, odpovedí na otázky a iné požiadavky.</li>
       </ul>
-    title: "Podmienky užívania, a pravidlá súkromia pre %{instance}"
+    title: Podmienky užívania, a pravidlá súkromia pre %{instance}
   themes:
     contrast: Mastodon (vysoký kontrast)
     default: Mastodon (tmavý)
