Initial push from local

--- a/app/javascript/mastodon/locales/de.json
+++ b/app/javascript/mastodon/locales/de.json
@@ -139,6 +139,7 @@
   "getting_started.developers": "Entwickler",
   "getting_started.directory": "Profilverzeichnis",
   "getting_started.documentation": "Dokumentation",
+  "getting_started.donate": "Spenden",
   "getting_started.heading": "Erste Schritte",
   "getting_started.invite": "Leute einladen",
   "getting_started.open_source_notice": "Mastodon ist quelloffene Software. Du kannst auf GitHub unter {github} dazu beitragen oder Probleme melden.",
