--- a/app/javascript/mastodon/locales/es.json
+++ b/app/javascript/mastodon/locales/es.json
@@ -139,6 +139,7 @@
   "getting_started.developers": "Desarrolladores",
   "getting_started.directory": "Profile directory",
   "getting_started.documentation": "Documentation",
+  "getting_started.donate": "Donar",
   "getting_started.heading": "Primeros pasos",
   "getting_started.invite": "Invitar usuarios",
   "getting_started.open_source_notice": "Mastodon es software libre. Puedes contribuir o reportar errores en {github}.",
