--- a/app/javascript/mastodon/locales/nl.json
+++ b/app/javascript/mastodon/locales/nl.json
@@ -139,6 +139,7 @@
   "getting_started.developers": "Ontwikkelaars",
   "getting_started.directory": "Gebruikersgids",
   "getting_started.documentation": "Documentatie",
+  "getting_started.donate": "Doneren",
   "getting_started.heading": "Aan de slag",
   "getting_started.invite": "Mensen uitnodigen",
   "getting_started.open_source_notice": "Mastodon is vrije software. Je kunt bijdragen of problemen melden op GitHub via {github}.",
