--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1011,7 +1011,8 @@ ca:
     title: "%{instance} Condicions del servei i política de privadesa"
   themes:
     contrast: Mastodon (Alt contrast)
-    default: Mastodon (Fosc)
+    default: Todon.nl (Fosc - predeterminat)
+    mastodon-default: Mastodon (Fosc - predeterminat del projecte)
     mastodon-light: Mastodon (Clar)
   time:
     formats:
