--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1013,7 +1013,8 @@ de:
     title: "%{instance} Nutzungsbedingungen und Datenschutzerklärung"
   themes:
     contrast: Mastodon (Hoher Kontrast)
-    default: Mastodon (Dunkel)
+    default: Todon.nl (Dunkel - Standard)
+    mastodon-default: Mastodon (Dunkel - Projektstandard)
     mastodon-light: Mastodon (Hell)
   time:
     formats:
