--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1012,7 +1012,8 @@ en:
     title: "%{instance} Terms of Service and Privacy Policy"
   themes:
     contrast: Mastodon (High contrast)
-    default: Mastodon (Dark)
+    default: Todon.nl (Dark - default)
+    mastodon-default: Mastodon (Dark - project default)
     mastodon-light: Mastodon (Light)
   time:
     formats:
