--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -724,8 +724,9 @@ es:
   terms:
     title: Términos del Servicio y Políticas de Privacidad de %{instance}
   themes:
-    contrast: Alto contraste
-    default: Mastodon
+    contrast: Mastodon (alto contraste)
+    default: Todon.nl (oscuro - por defecto)
+    mastodon-default: Mastodon (oscuro - proyecto por defecto)
     mastodon-light: Mastodon (claro)
   time:
     formats:
