--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -1011,7 +1011,8 @@ nl:
     title: Gebruiksvoorwaarden en privacybeleid van %{instance}
   themes:
     contrast: Mastodon (hoog contrast)
-    default: Mastodon (donker)
+    default: Todon.nl (donker - standaard)
+    mastodon-default: Mastodon (donker - projectstandaard)
     mastodon-light: Mastodon (licht)
   time:
     formats:
