--- a/app/javascript/mastodon/locales/sl.json
+++ b/app/javascript/mastodon/locales/sl.json
@@ -134,6 +134,11 @@
   "empty_column.mutes": "Niste utišali še nobenega uporabnika.",
   "empty_column.notifications": "Nimate še nobenih obvestil. Poveži se z drugimi, da začnete pogovor.",
   "empty_column.public": "Tukaj ni ničesar! Da ga napolnite, napišite nekaj javnega ali pa ročno sledite uporabnikom iz drugih strežnikov",
+  "federation.change": "Adjust status federation",
+  "federation.federated.long": "Allow toot to reach other instances",
+  "federation.federated.short": "Federated",
+  "federation.local_only.long": "Restrict this toot only to my instance",
+  "federation.local_only.short": "Local-only",
   "follow_request.authorize": "Overi",
   "follow_request.reject": "Zavrni",
   "getting_started.developers": "Razvijalci",
@@ -328,6 +333,7 @@
   "status.favourite": "Priljubljen",
   "status.filtered": "Filtrirano",
   "status.load_more": "Naloži več",
+  "status.local_only": "This post is only visible by other users of your instance",
   "status.media_hidden": "Mediji so skriti",
   "status.mention": "Omeni @{name}",
   "status.more": "Več",
