--- a/app/javascript/mastodon/locales/ta.json
+++ b/app/javascript/mastodon/locales/ta.json
@@ -134,6 +134,11 @@
   "empty_column.mutes": "நீங்கள் இதுவரை எந்த பயனர்களையும் முடக்கியிருக்கவில்லை.",
   "empty_column.notifications": "உங்களிடம் எந்த அறிவிப்புகளும் இல்லை. உரையாடலைத் தொடங்க பிறருடன் தொடர்புகொள்ளவும்.",
   "empty_column.public": "இங்கே எதுவும் இல்லை! பகிரங்கமாக ஒன்றை எழுதவும் அல்லது மற்ற நிகழ்வுகளிலிருந்து பயனர்களை அதை நிரப்புவதற்கு கைமுறையாக பின்பற்றவும்",
+  "federation.change": "Adjust status federation",
+  "federation.federated.long": "Allow toot to reach other instances",
+  "federation.federated.short": "Federated",
+  "federation.local_only.long": "Restrict this toot only to my instance",
+  "federation.local_only.short": "Local-only",
   "follow_request.authorize": "அதிகாரமளி",
   "follow_request.reject": "விலக்கு",
   "getting_started.developers": "உருவாக்குநர்கள்",
@@ -328,6 +333,7 @@
   "status.favourite": "விருப்பத்துக்குகந்த",
   "status.filtered": "வடிகட்டு",
   "status.load_more": "அதிகமாய் ஏற்று",
+  "status.local_only": "This post is only visible by other users of your instance",
   "status.media_hidden": "மீடியா மறைக்கப்பட்டது",
   "status.mention": "குறிப்பிடு @{name}",
   "status.more": "அதிக",
