--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -145,6 +145,7 @@
   "getting_started.directory": "Profile directory",
   "getting_started.documentation": "Documentation",
   "getting_started.heading": "Getting started",
+  "getting_started.hometown_open_source_notice": "Hometown is also open source, at {hometown}.",
   "getting_started.invite": "Invite people",
   "getting_started.open_source_notice": "Mastodon is open source software. You can contribute or report issues on GitHub at {github}.",
   "getting_started.security": "Security",
