Move antispam setting to admin settings

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -245,6 +245,7 @@ en:
     dashboard:
       backlog: backlogged jobs
       config: Configuration
+      feature_antispam: Anti-spam
       feature_deletions: Account deletions
       feature_invites: Invite links
       feature_profile_directory: Profile directory
@@ -390,6 +391,9 @@ en:
       activity_api_enabled:
         desc_html: Counts of locally posted statuses, active users, and new registrations in weekly buckets
         title: Publish aggregate statistics about user activity
+      antispam_enabled:
+        desc_html: Mastodon can auto-silence and auto-report accoutns based on measures such as detecting accounts who send repeated unsolicited messages. There may be false positives.
+        title: Anti-spam
       bootstrap_timeline_accounts:
         desc_html: Separate multiple usernames by comma. Only local and unlocked accounts will work. Default when empty is all local admins.
         title: Default follows for new users
